--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,10 @@
 [unstable]
+build-std-features = ["compiler-builtins-mem"]
 build-std = ["core", "compiler_builtins"]
+
+[build]
+target = "x86_64-simpleos.json"
+
+
+[target.'cfg(target_os = "none")']
+runner = "bootimage runner"
